search page autocomplete works

--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -22,8 +22,10 @@
 	<script src="{{"/assets/libs/leaflet.ajax.min.js" | relative_url }}"></script>
 	<script src="{{"/assets/libs/styledLayerControl.js" | relative_url }}"></script>
 
-
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.0/js/standalone/selectize.js" integrity="sha512-B03hDxgZPMBobOrnBhFiKvf8XCO7IRNa26/WiQK9lU+grXd5WXVHq3togZ67YLcUnNdrtoBbn5bi0GhYd0ivCA==" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.0/css/selectize.bootstrap4.min.css" integrity="sha512-qktYcs1jG0pnuA/ytX0UPY7p+g/cgWZxhNv7T5tjUm6Cc0T+SftVd4PfzBOeZ/mq2an7+8SrDyA7a9u3Uh9wpw==" crossorigin="anonymous" />
 
 	<script src="{{"/assets/libs/semantic.min.js" | relative_url }}"></script>
 	<link rel="stylesheet" href="{{ "/assets/libs/semantic.min.css" | relative_url }}">
