--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -7,10 +7,10 @@
 	<div class="collapse navbar-collapse" id="navbar">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
-				<a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="./map.html">Overview Map</a>
+				<a class="nav-link" href="/map.html">Overview Map</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="/tempdir.html">Temple Directory</a>
