--- a/site/_layouts/temple_info.html
+++ b/site/_layouts/temple_info.html
@@ -30,7 +30,9 @@
 	<script src="{{"/assets/libs/semantic.min.js" | relative_url }}"></script>
 	<link rel="stylesheet" href="{{ "/assets/libs/semantic.min.css" | relative_url }}">
 
-	<script src="{{"/assets/js/temple_info.js" | relative_url }}"></script>
+	<script src="{{"/assets/libs/lightbox.min.js" | relative_url }}"></script>
+	<link rel="stylesheet" href="{{ "/assets/libs/lightbox.min.css" | relative_url }}">
+
 	<link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
 	<link rel="stylesheet" href="{{ "/assets/css/temple_info.css" | relative_url }}">
 
@@ -54,6 +56,7 @@
 			<div id="map"></div>
 		</div>
 
+		<h3>Images</h3>
 		<div class="gallery">
 			{{content}}
 		</div>
