--- a/site/_includes/gallery.html
+++ b/site/_includes/gallery.html
@@ -1,6 +1,3 @@
-<div class="image-gallery">
-
-
 	{% assign sorted = site.static_files | sort: 'name' %}
 	{% for file in sorted %}
 	{% assign dir = site.image_dir + image.path %}
@@ -9,11 +6,9 @@
 	{% assign filenameparts = file.path | split: "/" %}
 
 	{% assign filename = filenameparts | last | replace: file.extname,"" %}
-	<div class="box"><a href="{{ file.path | relative_url }}" title="{{ filename }}">
-			<img src="{{ file.path | relative_url }} " alt="{{ filename }}" class="img-gallery" />
-		</a></div>
+	<a class="link" href="{{ file.path | relative_url }}" data-lightbox="example-1"><img class="image" src="{{ file.path | relative_url }}" /></a>
 	{% endif %}
 	{% endif %}
 	{% endfor %}
-</div>
-<div class="templeid" id="{{page.village_num}}"></div>
+
+	<div class="templeid" id="{{page.village_num}}"></div>
