--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-sm">
-	<a class="navbar-brand" href="#">Temples of Sinkawang</a>
+	<a class="navbar-brand" href="#">Temples of Singkawang</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
